feat: update branding from AIOutlet to xshop.ai across all files and tests

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "xShop.ai Admin",
-  "name": "xShop.ai Admin Dashboard",
+  "short_name": "xshop.ai Admin",
+  "name": "xshop.ai Admin Dashboard",
   "icons": [
     {
       "src": "favicon.ico",
