feat: update branding from xshop.ai to xshopai across all files and configurations

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "xshop.ai Admin",
-  "name": "xshop.ai Admin Dashboard",
+  "short_name": "xshopai Admin",
+  "name": "xshopai Admin Dashboard",
   "icons": [
     {
       "src": "favicon.ico",
