--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
     {
       "type": "chrome",
       "request": "launch",
-      "name": "Debug Admin UI (Chrome)",
+      "name": "Debug (Chrome)",
       "url": "http://localhost:3001",
       "webRoot": "${workspaceFolder}/src",
       "sourceMaps": true,
@@ -13,7 +13,7 @@
     {
       "type": "msedge",
       "request": "launch",
-      "name": "Debug Admin UI (Edge)",
+      "name": "Debug (Edge)",
       "url": "http://localhost:3001",
       "webRoot": "${workspaceFolder}/src",
       "sourceMaps": true,
