--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,34 +17,33 @@ on:
     branches:
       - main
     paths:
-      - 'src/**'
-      - 'public/**'
-      - 'package*.json'
-      - 'Dockerfile'
-      - '.github/workflows/deploy.yml'
+      - "src/**"
+      - "public/**"
+      - "package*.json"
+      - "Dockerfile"
+      - ".github/workflows/deploy.yml"
 
   pull_request:
     branches:
       - main
     paths:
-      - 'src/**'
-      - 'public/**'
-      - 'package*.json'
-      - 'Dockerfile'
+      - "src/**"
+      - "public/**"
+      - "package*.json"
+      - "Dockerfile"
 
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Target environment'
+        description: "Target environment"
         required: true
-        default: 'dev'
+        default: "dev"
         type: choice
         options:
           - dev
-          - staging
           - prod
       image_tag:
-        description: 'Image tag (optional, defaults to git SHA)'
+        description: "Image tag (optional, defaults to git SHA)"
         required: false
         type: string
 
@@ -65,7 +64,7 @@ jobs:
     name: Test & Lint
     runs-on: ubuntu-latest
     environment: ${{ github.event.inputs.environment || 'dev' }}
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -73,8 +72,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '24'
-          cache: 'npm'
+          node-version: "24"
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -102,7 +101,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     if: github.event_name == 'pull_request'
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -147,13 +146,13 @@ jobs:
       docker_context: .
       docker_target: production
       container_port: 8080
-      cpu: '0.25'
-      memory: '0.5Gi'
+      cpu: "0.25"
+      memory: "0.5Gi"
       min_replicas: 0
       max_replicas: 3
       ingress_enabled: true
       ingress_external: true
-      health_probe_path: '/'
+      health_probe_path: "/"
       dapr_enabled: false
       env_vars: '[{"name": "REACT_APP_API_URL", "value": "https://admin-bff.ashyforest-bad0b961.swedencentral.azurecontainerapps.io"}]'
     secrets: inherit
@@ -179,7 +178,7 @@ jobs:
       max_replicas: ${{ github.event.inputs.environment == 'prod' && 10 || 3 }}
       ingress_enabled: true
       ingress_external: true
-      health_probe_path: '/'
+      health_probe_path: "/"
       dapr_enabled: false
       image_tag: ${{ github.event.inputs.image_tag }}
       env_vars: '[{"name": "REACT_APP_API_URL", "value": "https://admin-bff.ashyforest-bad0b961.swedencentral.azurecontainerapps.io"}]'
@@ -197,7 +196,7 @@ jobs:
       always() && 
       (needs.deploy-dev.result == 'success' || needs.deploy-manual.result == 'success') &&
       !(needs.deploy-dev.result == 'failure' || needs.deploy-manual.result == 'failure')
-    
+
     steps:
       - name: Deployment notification
         run: |
