--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 8080;
+    listen 80;
     server_name _;
     root /usr/share/nginx/html;
     index index.html;
@@ -15,6 +15,37 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
+
+    # ==========================================================================
+    # Proxy API requests to web-bff
+    # ==========================================================================
+    location /api/ {
+        # Use Docker's embedded DNS resolver for local deployment
+        resolver 127.0.0.11 valid=30s;
+        resolver_timeout 5s;
+        
+        # Store the upstream in a variable to force re-resolution
+        set $upstream_bff "${BFF_URL}";
+        
+        # Proxy to web-bff
+        proxy_pass $upstream_bff;
+        
+        proxy_http_version 1.1;
+        proxy_set_header Host ${BFF_HOST};
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection "";
+        
+        # Timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
+        # Enable SSL for HTTPS upstreams (Azure Container Apps)
+        proxy_ssl_server_name on;
+        proxy_ssl_verify off;
+    }
 
     # Cache static assets
     location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
