--- a/package.json
+++ b/package.json
@@ -73,5 +73,9 @@
     "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.3.6",
     "typescript": "^4.9.5"
+  },
+  "engines": {
+    "node": ">=24.0.0",
+    "npm": ">=10.0.0"
   }
 }
